# grpc-example

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  build.gradle  build_and_run.sh  envoy-config.yml  run_envoy.sh
cpp/: .gitignore  CMakeLists.txt
cpp/src/: CMakeLists.txt  GreetServerImpl.cpp  GreetServerImpl.h  main.cpp
go-grpc-gateway/: Makefile  gateway.go  go.mod  go.sum
java/: .gitignore  build.gradle
java/src/main/java/org/github/lukaswoodtli/grpc/greeting/client/: GreetingClient.java
java/src/main/java/org/github/lukaswoodtli/grpc/greeting/server/: GreetingServer.java
java/src/main/proto/greet/: greet.proto
java/src/test/java/org/github/lukaswoodtli/grpc/greeting/client/: TestGateway.java  TestService.java
src/main/java/org/github/lukaswoodtli/grpc/greeting/client/: GreetingClient.java
src/main/java/org/github/lukaswoodtli/grpc/greeting/server/: GreetServiceImpl.java
src/main/proto/greet/: greet.proto
